<resources>
    <string name="app_name">X-CUP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="home">首页</string>
    <string name="design">设计</string>
    <string name="forum">论坛</string>
    <string name="category">库</string>
    <string name="profile">我的</string>


    <string name="glassMaterial">材质</string>
    <string-array name="material">
        <item>玻璃</item>
        <item>金属</item>
        <item>可降解</item>
        <item>木材</item>
        <item>陶瓷</item>
    </string-array>

    <string name="glassColor">颜色</string>
    <string-array name="color">
        <item>白色</item>
        <item>灰色</item>
        <item>金属色</item>
        <item>双色</item>
        <item>透明</item>
        <item>烟灰色</item>
        <item>烟灰色</item>
        <item>原木色</item>
    </string-array>

    <string name="glassShape">形状</string>
    <string-array name="shape">
        <item>压口杯</item>
        <item>撇口杯</item>
        <item>六方杯</item>
        <item>直身杯</item>
        <item>带环杯</item>
        <item>圆形杯</item>
        <item>三角杯</item>
    </string-array>

    <string name="glassSize">体积</string>
    <string-array name="size">
        <item>150ml</item>
        <item>200ml</item>
        <item>250ml</item>
        <item>300ml</item>
        <item>350ml</item>
        <item>400ml</item>
    </string-array>

    <string name="glassPattern">图案</string>
    <string-array name="pattern">
        <item>雨点</item>
        <item>蝴蝶</item>
        <item>爱心</item>
        <item>孔雀</item>
        <item>火焰</item>
        <item>其他</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detailText">Anime is Japanese hand-drawn or computer animation. The word is the abbreviated pronunciation of animation in Japanese, where this term references all animation.Outside Japan, anime is used to refer specifically to animation from Japan or as a Japanese-disseminated animation style often characterized by colorful graphics, vibrant characters and fantastical themes.Arguably, the stylization approach to the meaning may open up the possibility of anime produced in countries other than Japan.For simplicity, many Westerners strictly view anime as an animation product from Japan.Some scholars suggest defining anime as specifically or quintessentially Japanese may be related to a new form of orientalism.The earliest commercial Japanese animation dates to 1917, and production of anime works in Japan has since continued to increase steadily. The characteristic anime art style emerged in the 1960s with the works of Osamu Tezuka and spread internationally in the late twentieth century, developing a large domestic and international audience. Anime is distributed theatrically, by television broadcasts, directly to home media, and over the Internet. It is classified into numerous genres targeting diverse broad and niche audiences.Anime is a diverse art form with distinctive production methods and techniques that have been adapted over time in response to emergent technologies. It consists of an ideal story-telling mechanism, combining graphic art, characterization, cinematography, and other forms of imaginative and individualistic techniques.The production of anime focuses less on the animation of movement and more on the realism of settings as well as the use of camera effects, including panning, zooming, and angle shots. Being hand-drawn, anime is separated from reality by a crucial gap of fiction that provides an ideal path for escapism that audiences can immerse themselves into with relative ease. Diverse art styles are used and character proportions and features can be quite varied, including characteristically large emotive or realistically sized eyes.The anime industry consists of over 430 production studios, including major names like Studio Ghibli, Gainax, and Toei Animation. Despite comprising only a fraction of Japan\'s domestic film market, anime makes up a majority of Japanese DVD sales. It has also seen international success after the rise of English-dubbed programming. This rise in international popularly has resulted in non-Japanese productions using the anime art style, but these works are usually described as anime-influenced animation rather than anime proper.</string>
</resources>
