<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pink3"
    tools:context="fragment.DesignFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/red4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textStyle="bold"
            android:text="设计"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnImport"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_alignParentRight="true"
            android:background="@mipmap/icon_import_white"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/cup1_1"
                android:scaleType="center"/>

            <ImageButton
                android:id="@+id/up"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:background="@null"
                android:src="@drawable/bg_up"
                android:text="上"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <ImageButton
                    android:id="@+id/left"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bg_left"
                    android:text="左"/>

                <ImageButton
                    android:id="@+id/down"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bg_down"
                    android:text="下"/>

                <ImageButton
                    android:id="@+id/right"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bg_right"
                    android:text="右"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/material"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="@string/glassMaterial"
                    android:layout_margin="3dp"
                    android:background="@color/bg1"/>

                <Button
                    android:id="@+id/color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/glassColor"
                    android:textColor="@color/white"
                    android:layout_margin="3dp"
                    android:background="@color/bg2"/>

                <Button
                    android:id="@+id/shape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="@string/glassShape"
                    android:layout_margin="3dp"
                    android:background="@color/bg3"/>

                <Button
                    android:id="@+id/size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/glassSize"
                    android:textColor="@color/white"
                    android:layout_margin="3dp"
                    android:background="@color/bg4"/>

                <Button
                    android:id="@+id/pattern"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="@string/glassPattern"
                    android:layout_margin="3dp"
                    android:background="@color/bg5"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
